crates/test-files/fixtures/compile_errors/bad_ingot/src/foo.fe
use ingot::bing::Bong::*
use ingot::bing::Tong
use ingot::bing as std

struct Foo {
    pub my_num: u256
}

struct Bar {}
